Hyperlink Color Update, Pt. 1

--- a/views/resources.html
+++ b/views/resources.html
@@ -2,19 +2,19 @@
     <p>These are additional links and resources to gather more information about the world of Pokemon!</p>
     <br>
     <br>
-    <a href='http://www.pokemon.com/us/'>Pokémon.com</a>
+    <a class='hyperlinks' href='http://www.pokemon.com/us/'>Pokémon.com</a>
     <br>
     <br>
-    <a href='http://www.ign.com/lists/pokemon'>IGN.com Top 100 Pokémon</a>
+    <a class='hyperlinks' href='http://www.ign.com/lists/pokemon'>IGN.com Top 100 Pokémon</a>
     <br>
     <br>
-    <a href='http://bulbapedia.bulbagarden.net/wiki/Main_Page'>Bulbapedia, The Community Driven Pokémon Encyclopedia</a>
+    <a class='hyperlinks' href='http://bulbapedia.bulbagarden.net/wiki/Main_Page'>Bulbapedia, The Community Driven Pokémon Encyclopedia</a>
     <br>
     <br>
-    <a href='http://www.pokeapi.co/#'>Pokeapi, The RESTful Pokémon API</a>
+    <a class='hyperlinks' href='http://www.pokeapi.co/#'>Pokeapi, The RESTful Pokémon API</a>
     <br>
     <br>
-    <a href='http://pokemondb.net/'>The Pokémon Database</a>
+    <a class='hyperlinks' href='http://pokemondb.net/'>The Pokémon Database</a>
     <br>
     <br>
 </section>
