home.html spelling correction

--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
     </div>
     <br>
     <div>
-        <p>This website will focus on the Original 25 Pokémon, the ones that started the entire phenomenon! The Pokémon franchise is now over two decades into existence with HUNDREDS of sprites in a huge database called the Pokédex. The information seen here for the Original 25 Pokémon sprites was gathered from the Pokédex along with a few others websites for your enjoyment!</p>
+        <p>This website will focus on the Original 25 Pokémon, the ones that started the entire phenomenon! The Pokémon franchise is now over two decades into existence with HUNDREDS of sprites in a huge database called the Pokédex. The information seen here for the Original 25 Pokémon sprites was gathered from the Pokédex along with a few other websites for your enjoyment!</p>
     </div>
     <br>
     <div>
