Hamburger menu and CSS styling

--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
     </div>
     <br>
     <div>
-        <p>This website will focus on the Original 25 Pokémon, the ones that started the entire phenomenon! The Pokémon franchise is now over two decades into existence with HUNDREDS of sprites in a huge database called the Pokédex. The information seen here for the Original 25 Pokémon sprites was gathered from the Pokédex along with a few others websites for your enjoyment!</p>
+        <p>This website will focus on the Original 25 Pokémon, the ones that started the entire phenomenon! The Pokémon franchise is now over two decades into existence with HUNDREDS of sprites in a huge database called the Pokédex. The information seen here for the Original 25 Pokémon sprites was gathered from the Pokédex along with a few other websites for your enjoyment!</p>
     </div>
     <br>
     <div>
@@ -13,12 +13,14 @@
 </section>
 
 <section class='trivia'>
-    <h1 style='font-size:22px'>Pokémon Trivia!!</h1>
+    <h1>
+        <div class='trivia-title'>Pokémon Trivia!!</div>
+    </h1>
         <p>1. 'Pokémon'' is short for the original Japanese title of 'Pocket Monsters'.</p>
         <br>
         <p>2. The franchise was created by Satoshi Tajiri in 1995.</p>
         <br>
-        <p>3. Pokémon is the second best-selling video game franchise, behind only Nintendo's<br>Mario franchise and is one of the highest-grossing media franchises of all time.</p>
+        <p>3. Pokémon is the second best-selling video game franchise, behind only Nintendo's Mario franchise and is one of the highest-grossing media franchises of all time.</p>
         <br>        
         <p>4. As of May 2016, the Pokémon franchise has grossed revenues of $46.2 billion US dollars!</p>
         <br>
