--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none;
+}
+
 body {
     background-color: #3C59A5;
     color: #FFCC03;
@@ -9,16 +13,34 @@ body {
     -webkit-font-smoothing: antialiased !important; 
 }
 
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.main-header{
+    width:100%;
+    height:70px;
+    background-color: black;
+    padding-top: 20px;
+}
+
+.nav {
     width: 100%;
-    height: 10%;
+    height: 60px;
     background-color:black;
-    padding:50px;
-    font-size: 28px;
-    }
+}
+
+.nav ul {
+    text-align: center;
+}
+.nav li{
+    display:inline;
+}
+
+.nav a {
+    margin-right: 15px;
+}
+
+.nav a hover {
+    margin-right: 15px;
+}
+
 
 header {
     display: flex;
@@ -43,55 +65,54 @@ footer {
     border: 2px solid #FFCC03;
 
 }
+.trivia-title {
+    font-size: 22px;
+}
 .trivia {
-    font-size:20px;
+    font-size: 20px;
     color: #c7a008;
     display: flex;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     flex-direction: column;
+    padding-left: 140px;
+    padding-right: 140px;
     /*white-space: -moz-pre-wrap !important;   Mozilla, since 1999 */
     word-break: break-word;
     /*white-space: normal;*/
     padding-bottom: 80px;
 }
-
 .contact {
     color: #fff;
     text-decoration: none;
-    border-bottom: 1px solid #fff;
     padding-bottom: 3px;
     font-size: 24px;
 }
 
 .contact:hover {
     color: #c7a008;
-    border-bottom: 1px solid #c7a008;
 }
 
 .contact-2 {
     color: #FFCC03;
     text-decoration: none;
-    border-bottom: 1px solid #fff;
     padding-bottom: 3px;
     font-size: 28px;
 }
 
 .contact-2:hover {
     color: #c7a008;
-    border-bottom: 1px solid #c7a008;
 }
 
-.menu {
-    display: block;
-    position: absolute;
-    top:0;
-    right:0;
-    width:40px;
+.hyperlinks {
+    color: #FFCC03;
+    text-decoration: none;
+    padding-bottom: 0.5px;
+    font-size: 28px;
 }
 
-.menu img {
-    width:100%;
+.hyperlinks:hover {
+    color: #c7a008;
 }
 
 .pokemonDisplay {
@@ -107,7 +128,6 @@ footer {
 
 .img-size {
     width: 100%;
-    /*height: 100%;*/
 }
 
 .arrows {
@@ -172,6 +192,14 @@ footer {
     .home-section {
         padding: 12px 70px 38px 70px;
     }
+    .trivia-title {
+    font-size: 20px;
+}
+    .trivia {
+    font-size: 18px;
+    padding-left: 70px;
+    padding-right: 70px;
+}
         
 }
 
@@ -181,8 +209,8 @@ footer {
         font-size: 14px;
     }
 
-    nav {
-        display: none;
+    .main-header {
+        padding-top: 0;
     }
 
     header {
@@ -201,12 +229,75 @@ footer {
     footer {
         height: 3%;
     }
-    .menu {
-        display: unset;
-        padding: 5px;
+    .mobile-nav-bar {
+        background: black;
+        min-height: 47px;
+        width: 100%;
+        position: relative;
+        cursor: pointer;
+        z-index: 20;
     }
+    .mobile-nav-bar .mobile-nav-button {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        display: inline-block;
+        width: 31px;
+        height: 30px;
+        border: 0;
+        padding: 0;
+        background: transparent;
+        cursor: pointer;
+    }
+    .mobile-nav-bar .mobile-nav-button .bar {
+        width: 100%;
+        float: left;
+        height: 4px;
+        margin-bottom: 5px;
+        background-color: #3C59A5;
+    }
+    .mobile-nav {
+        height: 0;
+        z-index: 10;
+    }
+    .mobile-nav ul {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        transform: translate(0, -300px);
+        -ms-transform: translate(0, -300px);
+        -webkit-transform: translate(0, -300px);
+        transition: all .2s ease-in-out;
+    }
+    .mobile-nav ul li a {
+        display: block;
+        padding: 10px;
+        color: #c7a008;
+        text-decoration: none;
+        background: #3C59A5;
+    }
+    .mobile-nav ul li a:active {
+        background: #3C59A5;
+    }
+    .mobile-nav.show-mobile-nav {
+        height: auto;
+    }
+    .mobile-nav.show-mobile-nav ul {
+        transform: translate(0px);
+        -ms-transform: translate(0px);
+        -webkit-transform: translate(0px);
+    }
+ 
     .home-section {
         padding: 6px 35px 15px 35px;
     }
+    .trivia-title {
+    font-size: 16px;
+    }
+    .trivia {
+    font-size: 14px;
+    padding-left: 35px;
+    padding-right: 35px;
+}
 }
 
