hover bottom border

--- a/views/searchInfo.html
+++ b/views/searchInfo.html
@@ -45,9 +45,8 @@
             Move 3: {{poke.Move3}}
             <br>
         <section class='arrows'>
-            <div style='padding-right
-            :50px' ng-click='back()'><</div>
-            <div style='padding-left:50px' ng-click='next()'>></div>
+            <div style='padding-right: 50px' ng-click='back()'><</div>
+            <div style='padding-left: 50px' ng-click='next()'>></div>
         </section>
     </section>
         <!--<div ng-show='prop'>
