--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ footer {
 
 .contact:hover {
     color: #c7a008;
+    border-bottom: 1px solid #c7a008;
 }
 
 .contact-2 {
@@ -103,6 +104,7 @@ footer {
 
 .contact-2:hover {
     color: #c7a008;
+    border-bottom: 1px solid #c7a008;
 }
 
 .hyperlinks {
@@ -110,7 +112,7 @@ footer {
     text-decoration: none;
     padding-bottom: 0.5px;
     font-size: 28px;
-
+    border-bottom: 1px solid #c7a008;
 }
 
 .hyperlinks:hover {
@@ -142,6 +144,7 @@ footer {
     color: #c7a008;
     font-size: 36px;
 }
+
 
 @media (max-width: 4096px) {
     .menu {
