--- a/views/searchInfo.html
+++ b/views/searchInfo.html
@@ -17,31 +17,44 @@
                 <img ng-src="{{poke.image}}">
             </div>
             <br>
-            Name: {{poke.Name}}
             <br>
-            National Pokedex ID: {{poke.NationalPokedexID}}
+            <span style='font-weight: bold'>Name:</span> {{poke.Name}}
             <br>
-            Height: {{poke.Height}} meters
             <br>
-            Weight: {{poke.Weight}} kg
+            <span style='font-weight: bold'>National Pokedex ID:</span> {{poke.NationalPokedexID}}
             <br>
-            Base Speed: {{poke.BaseSpeed}}
             <br>
-            Base Hit Points: {{poke.BaseHitPoints}} hit points
+            <span style='font-weight: bold'>Height:</span> {{poke.Height}} meters
             <br>
-            Base Attack: {{poke.BaseAttack}} hit points
             <br>
-            Base Defense: {{poke.BaseDefense}} hit points
+            <span style='font-weight: bold'>Weight:</span> {{poke.Weight}} kg
             <br>
-            Base Special Attack: {{poke.BaseSpecialAttack}} hit points
             <br>
-            Base Special Defense: {{poke.BaseSpecialDefense}} hit points
+            <span style='font-weight: bold'>Base Speed:</span> {{poke.BaseSpeed}}
             <br>
-            Move 1: {{poke.Move1}}
             <br>
-            Move 2: {{poke.Move2}}
+            <span style='font-weight: bold'>Base Hit Points:</span> {{poke.BaseHitPoints}} hit points
             <br>
-            Move 3: {{poke.Move3}}
+            <br>
+            <span style='font-weight: bold'>Base Attack:</span> {{poke.BaseAttack}} hit points
+            <br>
+            <br>
+            <span style='font-weight: bold'>Base Defense:</span> {{poke.BaseDefense}} hit points
+            <br>
+            <br>
+            <span style='font-weight: bold'>Base Special Attack:</span> {{poke.BaseSpecialAttack}} hit points
+            <br>
+            <br>
+            <span style='font-weight: bold'>Base Special Defense:</span> {{poke.BaseSpecialDefense}} hit points
+            <br>
+            <br>
+            <span style='font-weight: bold'>Move 1:</span> {{poke.Move1}}
+            <br>
+            <br>
+            <span style='font-weight: bold'>Move 2:</span> {{poke.Move2}}
+            <br>
+            <br>
+            <span style='font-weight: bold'>Move 3:</span> {{poke.Move3}}
             <br>
             <br>
             <section class='arrows'>
