--- a/css/main.css
+++ b/css/main.css
@@ -148,14 +148,14 @@ footer {
 
 .arrows {
     display: flex;
-    
     justify-content: center;
     align-items: center;
     flex-direction: row;
     width: 100%;
     height: 100%;
     color: #c7a008;
-    font-size: 36px;
+    font-size: 28px;
+    font-weight: bold;
 }
 .arrows:hover {
     cursor: pointer;
@@ -212,7 +212,7 @@ footer {
     }
 
     .menu {
-        display:none;
+        display: none;
     }
 
     .home-section {
@@ -225,6 +225,10 @@ footer {
         font-size: 18px;
         padding-left: 70px;
         padding-right: 70px;
+    }
+    .arrows {
+    font-size: 20px;
+    color: #3C59A5;
     }
          
 }
@@ -333,13 +337,17 @@ footer {
         width: 170px;
         font-size: 14px;
         font-weight: bold;
-}
+    }
     .submitButton {
         height: 26px;
         width: 60px;
         font-size: 14px;
         border: none;
         font-weight: bold;
+    }
+    .arrows {
+    font-size: 14px;
+    color: #3C59A5;
     }
 }
 
