--- a/views/searchInfo.html
+++ b/views/searchInfo.html
@@ -10,7 +10,7 @@
         <img src="./images/RotatingPokeball.gif" alt="">
     </div>
 
-    <section ng-show='prop'>
+    <section class='small-media-tag' ng-show='prop'>
         <section>
             <br>
             <div class='img-size'>
