Corrected broken Contact Info link

--- a/views/home.html
+++ b/views/home.html
@@ -28,5 +28,5 @@
 </section>
 
 <footer>
-    <a href="http://127.0.0.1:8080/#!/about" class='contact' >Contact Information</a>
+    <a href="http://coreyharville.com/#!/about" class='contact' >Contact Information</a>
 </footer>
